# ParMETIS

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Changelog  Makefile  README.md
.github/workflows/: ci.yml
conf/: gkbuild.cmake
include/: parmetis.h
libparmetis/: CMakeLists.txt  akwayfm.c  ametis.c  balancemylink.c  comm.c  ctrl.c  defs.h  diffutil.c  gklib.c  gklib_defs.h  gklib_rename.h  gkmetis.c  gkmpi.c  graph.c  initbalance.c  initmsection.c  initpart.c  kmetis.c  kwayrefine.c  match.c  mdiffusion.c  mesh.c  msetup.c  ometis.c  parmetislib.h  proto.h  remap.c  rmetis.c  serial.c  stat.c  struct.h  wave.c  weird.c  wspace.c  xyzpart.c
programs/: CMakeLists.txt  dglpart.c  dglpart2.c  dglpart3.c  io.c  otest.c  parmetisbin.h  ptest.c
utils/: listunescapedsymbols.csh
